--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@ If line returns `No Module Installed` don't count it, otherwise count
 2.
 Figure out what stats currently being recorded aren't being recorded properly
 
+3. Take in info for naming file
