results files go in different folder

--- a/TODO
+++ b/TODO
@@ -1,10 +1,20 @@
 1.
-Determine number of RAM sticks: 
+Figure out what stats currently being recorded aren't being recorded properly
+
+2.
+ Determine number of RAM sticks: 
 `sudo dmidecode -t memory | Size:` 
 If line returns `No Module Installed` don't count it, otherwise count
 `--vm  #of sticks`
+```vm = check_output(['sudo', 'dmidecode', '-t', 'memory', '|', 'grep', \
+        '-v', 'No', '|', 'wc', '-l']).decode()```
 
-2.
-Figure out what stats currently being recorded aren't being recorded properly
-
-3. Take in info for naming file
+NOTE:perhaps something like this if setup.sh didn't exist
+def read_sensors():
+    try:
+        output = check_output(['sensors']).decode()
+    except FileNotFoundError:
+        print("sensors is not installed, installing...")
+        check_output(["sudo", "apt-get", "install", "lm-sensors"])
+        output = check_output(['sensors']).decode()
+    return output
